@@ -61,6 +61,11 @@ if [ -z $GEOSERVER_DATA_DIR ]; then
     fi
 fi
 
+# if not told otherwise pump up the permgen
+if [ -z "$JAVA_OPS" ]; then
+  set JAVA_OPS=-XX:MaxPermSize=128m
+fi 
+
 cd "$GEOSERVER_HOME"
 
 echo "GEOSERVER DATA DIR is $GEOSERVER_DATA_DIR"
